correct way files

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
     <div id="menu">
-        <a href="char-seletor.html"><button id="singleplayer">Duelo Solo</button></a>
-        <a href="char-seletor.html"><button id="multiplayer">Multijogador</button></a>
+        <a href="html/single-player-seletor.html"><button id="singleplayer">Duelo Solo</button></a>
+        <a href="html/multplayer-seletor.html"><button id="multiplayer">Multijogador</button></a>
     </div>
     <div id="game-screen">
         <!-- Aqui o jogo será renderizado -->
@@ -16,6 +16,6 @@
         <button id="play-again">Jogar Novamente</button>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
