--- a/html/game.html
+++ b/html/game.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Play Game</title>
 </head>
 <body>
-    <canvas></canvas>
+    <header></header>
+    <main id="main-menu">
+        <div id="game-screen">
+            <div id="player01"><img src="../img/db32-Char.png" alt=""></div>
+        </div>
+        <script src="../js/script.js"></script>
+    </main>
 </body>
 </html>
