--- a/html/test.html
+++ b/html/test.html
@@ -1,4 +1,22 @@
-const personagem = document.getElementById("player");
+<!DOCTYPE html>
+<html>
+<head>
+  <style>
+    #personagem {
+      width: 50px;
+      height: 50px;
+      background-color: blue;
+      position: absolute;
+    }
+  </style>
+</head>
+<body>
+
+<div id="personagem"></div>
+<button onclick="pular()">Pular (W)</button>
+
+<script>
+  const personagem = document.getElementById("personagem");
   let positionX = 0;
   let jumping = false;
 
@@ -23,7 +41,7 @@ const personagem = document.getElementById("player");
       const jumpInterval = setInterval(() => {
         jumpHeight += 5;
         personagem.style.bottom = jumpHeight + "px";
-        if (jumpHeight >= 10) {
+        if (jumpHeight >= 100) {
           clearInterval(jumpInterval);
           const fallInterval = setInterval(() => {
             jumpHeight -= 5;
@@ -48,6 +66,7 @@ const personagem = document.getElementById("player");
       pular();
     }
   });
+</script>
 
-
-
+</body>
+</html>
