--- a/html/game.html
+++ b/html/game.html
@@ -10,61 +10,25 @@
     <header></header>
     <main id="main-menu">
         <div id="game-screen">
-            <div id="player"><img src="../img/suguru-base.png" alt=""></div>
-            <button onclick="pular()">Pular (W)</button>
+            <div id="player"><img src="../img/suguru-invocation.gif" alt="suguru-animate"></div>
         </div>
-        <script>
-            const personagem = document.getElementById("player");
-  let positionX = 0;
-  let jumping = false;
-
-  function atualizarPosicao() {
-    personagem.style.left = positionX + "px";
-  }
-
-  function moverParaDireita() {
-    positionX += 10;
-    atualizarPosicao();
-  }
-
-  function moverParaEsquerda() {
-    positionX -= 10;
-    atualizarPosicao();
-  }
-
-  function pular() {
-    if (!jumping) {
-      jumping = true;
-      let jumpHeight = 0;
-      const jumpInterval = setInterval(() => {
-        jumpHeight += 50;
-        personagem.style.bottom = jumpHeight + "px";
-        if (jumpHeight >= 10) {
-          clearInterval(jumpInterval);
-          const fallInterval = setInterval(() => {
-            jumpHeight -= 5;
-            personagem.style.bottom = jumpHeight + "px";
-            if (jumpHeight <= 0) {
-              personagem.style.bottom = "0";
-              clearInterval(fallInterval);
-              jumping = false;
-            }
-          }, 20);
-        }
-      }, 20);
-    }
-  }
-
-  document.addEventListener("keydown", (event) => {
-    if (event.key === "d") {
-      moverParaDireita();
-    } else if (event.key === "a") {
-      moverParaEsquerda();
-    } else if (event.key === "w") {
-      pular();
-    }
-  });
-    </script>
+        <script src="../js/script.js"></script>
     </main>
+    <footer>
+        <div id="contatos">
+            <p class="footer-title">Contato</p>
+            <a href="https://github.com/LuciusRick" target="_blank">Github</a>
+            <a href="https://www.linkedin.com/in/lucius-rick-dev/" target="_blank">Linkedin</a>
+        </div>
+        
+        <div id="anotthergames">
+            <p class="footer-title">Outros Games</p>
+            <a href="#" target="_blank">Web Anime Battle</a>
+            <a href="#" target="_blank">Exorcising Curses - Adventure of Getou</a>
+        </div>
+        <div id="div-tag">
+            <p>Game Web desenvolvido por Lucius</p>
+        </div>
+    </footer>
 </body>
 </html>
