--- a/index.html
+++ b/index.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Exorcising Curses</title>
 </head>
 <body>
-    <div id="menu">
-        <a href="html/single-player-seletor.html"><button id="singleplayer">Duelo Solo</button></a>
-        <a href="html/multplayer-seletor.html"><button id="multiplayer">Multijogador</button></a>
-    </div>
-    <div id="game-screen">
-        <!-- Aqui o jogo será renderizado -->
-    </div>
-    <div id="victory-screen">
-        <p>Vitória!</p>
-        <button id="play-again">Jogar Novamente</button>
-    </div>
-
-    <script src="js/script.js"></script>
+    <main id="index-main">
+        <div class="title"><h1>Exorcising Curses</h1></div>
+        <a href="html/char-seletor.html"><button id="singleplayer">Duelo Solo</button></a>
+        <a href="html/char-seletor.html"><button id="multiplayer">Multijogador</button></a>
+    </main>
+    <footer>
+        <div id="contatos">
+            <p class="footer-title">Contato</p>
+            <a href="https://github.com/LuciusRick" target="_blank">Github</a>
+            <a href="https://www.linkedin.com/in/lucius-rick-dev/" target="_blank">Linkedin</a>
+        </div>
+        
+        <div id="anotthergames">
+            <p class="footer-title">Outros Games</p>
+            <a href="#" target="_blank">Web Anime Battle</a>
+            <a href="#" target="_blank">Exorcising Curses - Adventure of Getou</a>
+        </div>
+        <div id="div-tag">
+            <p>Game Web desenvolvido por Lucius</p>
+        </div>
+    </footer>
 </body>
 </html>
