--- a/html/char-seletor.html
+++ b/html/char-seletor.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/char-seletor.css">
     <script src="script.js"></script>
     <title>Seleçao de Persona</title>
 </head>
@@ -14,7 +14,7 @@
             <img id="player1-character" src="../img/bg/satoru-image.jpeg" alt="Player 1 Character">
         </div>
             <div id="character-selection">
-                <div class="character" data-character="character1" id="satoro">
+                <div class="character" data-character="character1" id="satoro" onclick="selectCharacter(characterDiv)">
                     
                 </div>
                 <div class="character" data-character="character2" id="suguru">
@@ -23,7 +23,7 @@
                 <div class="character" data-character="character3" id="sukuna">
                     <img src="character3-full-body.jpg" alt="Character 3" id="persona-image">
                 </div>
-                <div class="character" data-character="character4" >
+                <div class="character" data-character="character4" id="toji">
                     <img src="character4-full-body.jpg" alt="Character 4" id="persona-image">
                 </div>
                 
